--- a/FableApp/package.json
+++ b/FableApp/package.json
@@ -6,8 +6,10 @@
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
+    "clean-webpack-plugin": "^3.0.0",
     "fable-compiler": "^2.3.19",
     "fable-loader": "^2.1.8",
+    "html-webpack-plugin": "^3.2.0",
     "preact": "^10.0.1",
     "preact-dom": "^1.0.1",
     "webpack": "^4.41.2",
