Added shared domin, hashing, minification etc.

--- a/FunctionApp/FunctionApp.fsproj
+++ b/FunctionApp/FunctionApp.fsproj
@@ -35,4 +35,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharedDomain\SharedDomain.fsproj" />
+  </ItemGroup>
 </Project>
