--- a/FableApp/src/FableApp.fsproj
+++ b/FableApp/src/FableApp.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
@@ -7,7 +7,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Elmish" Version="3.0.6" />
+    <PackageReference Include="Fable.Core" Version="3.1.2" />
+    <PackageReference Include="Fable.Promise" Version="2.0.0" />
+    <PackageReference Include="Thoth.Fetch" Version="1.1.0" />
     <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
     <PackageReference Include="Fable.React" Version="5.3.5" />
+    <PackageReference Include="Thoth.Json" Version="3.4.1" />
+    <PackageReference Include="Thoth.Json.Net" Version="3.6.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SharedDomain\SharedDomain.fsproj" />
   </ItemGroup>
 </Project>
